[workspace]
resolver = "2"
members = [
  "strategies/strategy-neko",
  "strategies/strategy-soroswap",
  "strategies/strategy-aquarius",
  "strategies/strategy-blend",
]

[workspace.package]
authors  = ["OppiaLabs <contact@oppiasoftwarelabs.com>"]
edition  = "2024"
license  = "MIT"
repository = "https://github.com/Neko-Protocol/neko-strategies-defindex"
version  = "0.1.0"

[workspace.dependencies]
# Must match defindex-strategy-core v0.3.0 requirement: ^25.0.2
soroban-sdk                  = "25.0.2"
defindex-strategy-core       = "0.3.0"
soroban-fixed-point-math     = "1.5.0"

[profile.release]
opt-level       = "z"
overflow-checks = true
debug           = 0
strip           = "symbols"
debug-assertions = false
panic           = "abort"
codegen-units   = 1
lto             = true

[profile.release-with-logs]
inherits         = "release"
debug-assertions = true
