[package]
name        = "strategy-aquarius"
description = "DeFindex strategy — single-asset LP entry into Aquarius AMM pools with AQUA reward harvesting"
version.workspace     = true
authors.workspace     = true
license.workspace     = true
edition.workspace     = true
repository.workspace  = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest    = false

[dependencies]
soroban-sdk            = { workspace = true }
defindex-strategy-core = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract      = true
cargo_inherit = true
