[package]
name        = "strategy-blend"
description = "DeFindex strategy — Blend V2 lending (Palta-compatible)"
version.workspace     = true
authors.workspace     = true
license.workspace     = true
edition.workspace     = true
repository.workspace  = true
publish = false

[lib]
crate-type = ["cdylib"]
doctest    = false

[dependencies]
soroban-sdk                = { workspace = true }
defindex-strategy-core     = { workspace = true }
soroban-fixed-point-math   = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract      = true
cargo_inherit = true
